--- a/WebLibrary/WebAPI/wwwroot/login.html
+++ b/WebLibrary/WebAPI/wwwroot/login.html
@@ -38,7 +38,7 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            const response = await fetch('/api/User/login', {
+            const response = await fetch('/api/Auth/Login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
